# rusty_music

./: Cargo.toml  README.md
examples/: custom_instrument.rs  dsp.rs  simple.rs
macros/: Cargo.toml
src/: lib.rs  main.rs
src/clock/: mod.rs
src/music_plugin/: mod.rs
src/musicians/: arpegggiator.rs  arpeggiator.rs  bassist.rs  conductor.rs  drummer.rs  mod.rs  soloist.rs
src/player/: mod.rs
