[workspace]
members = ["macros"]

[workspace.package]
edition = "2021"
authors = ["Tommie Nygren"]
documentation = "README.md"
readme = "README.md"
description = "A music generation plugin for bevy"
homepage = "https://github.com/lavaeater/rusty_music"
repository = "https://github.com/lavaeater/rusty_music"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "audio", "gamedev"]
categories = ["game-development", "multimedia::audio"]

[package]
name = "rusty_music"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
exclude = [
    "assets",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = { version = "0.19" , features = ["wav"], optional = true}
rand = "0.8.5"
bevy-rusty-music-macros = { version="0.1.0", path = "macros" }
bevy_fundsp = { git = "https://github.com/lavaeater/bevy_fundsp.git", branch = "bevy-0.13", default-features = false, features = ["kira"], optional = true }

[features]
default = ["kira"]
kira = ["bevy_kira_audio"]
fundsp = ["kira", "bevy_fundsp"]

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "custom_instrument"
path = "examples/custom_instrument.rs"

